# hcmus-ai-foundations--dt

./: README.md
Releases/23127040_23127065_23127211/: README.txt
Releases/23127040_23127065_23127211/Source/: README.md  pyproject.toml
Releases/23127040_23127065_23127211/Source/data/: wdbc.csv
Releases/23127040_23127065_23127211/Source/src/: __types.py  main.mini.ipynb
Releases/23127040_23127065_23127211/Source/src/dt/: __main__.py
Releases/23127040_23127065_23127211/Source/src/utils/: __init__.py  args.py  data.py
Report/: Report.tex
Report/pages/: Comparation.tex  Evaluation.tex  Experiments.tex  ProjectInfo.tex  TaskAssignment.tex
Source/: README.md  pyproject.toml  requirements.txt
Source/src/: benchmark.py  main.ipynb
Source/src/constants/: base.py  path.py
Source/src/dt/: __init__.py
Source/src/utils/: __init__.py  base.py  format.py  visualizer.py
